[package]
name = "fuzz_rustc"
version = "0.0.1"
publish = false
edition = "2018"

[dependencies]
libfuzzer-sys = "0.3.2"

[dependencies.rustc_driver]
features = ["llvm"]
path = "./rust/compiler/rustc_driver"

[dependencies.rustc_span]
path = "./rust/compiler/rustc_span"

[dependencies.rustc_interface]
path = "./rust/compiler/rustc_interface"

[[bin]]
name = "fuzz_target"
path = "fuzz_target.rs"
